Fix the image cropping issue

--- a/scss/_patterns_inline-images.scss
+++ b/scss/_patterns_inline-images.scss
@@ -28,7 +28,7 @@
       * {
         max-height: $sp-xxx-large;
         max-width: 7rem;
-        width: auto;
+        width: 100%;
 
         @media only screen and (min-width: $breakpoint-medium) {
           max-height: 5.5rem;
